2007-06-20 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b78

 All about setup:

 - Text changes / typos.
 - Disable next/prev button if last/first tab is reached.

 Thanks to Andy.

 - removed function newIn()

2007-06-20 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b77

 * Change: Little layout fix for siriux frame.

2007-06-20 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b76

 * New: Goto # selectbox in photo navigation.

2007-06-20 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b75

 * Change: Dont show icons below thumbs for ecards etc.
   Note: Code is still there, just needs to be uncomment.

 * Fix: Even if returnTo link is off, there should be a link 
	    back up to the album.
   
   Thanks to Peter Schumacher.

 * Change: Make Popups from photoview a little bigger.
  
2007-06-20 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b74

 * Change: Use of navigation via arrow keys in photo view.

 * Fix: Remove some debug code.

2007-06-19 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b73

 * Change: Lots of typos. Also some smaller layout nicifies.

   Thanks to BAAAAAART

 * Change: Update wz_tooltip.js ->  v. 4.02

2007-06-16 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b72

 * Change: just some cosmetic changes.

2007-06-08 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b71

 * Fix: Autorotation on upload didnt work.

 * Fix: Wrong translation calles in lib/content.

 * Fix: The "go go go" message in setup was no translated.

 * Manifest update.

2007-06-07 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b70

 * Fix: Manifest was empty !

 * Fix: HTML fixes in Setup

 * Fix: Lots of missing SVN IDs

2007-06-07 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b69

 * Fix: Don't show empty tooltips in thumbsview.

2007-06-07 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b68

 * NEW: Its now possible to resize the orginal version.

   Changes in:
	- popups/resize_photo.php
        - classes/Album.php
        - classes/AlbumItem.php
        - classes/Image.php
   
   At a first glance its VERY slow. If someone wanna tune it ..
