@@ -1,3 +1,15 @@
+2007-06-22 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b79
+
+ * Fix: rearrange works now with empty subalbums.
+
+   Puuh, lots of work. But thanks to Andy, sorry no YUI.
+
+ * Change: Code cleanup for getHighlightTag()
+
+ * Fix: Password fields were broken.
+
+ * Change: "show" a photo is now called "unhide".
+
 2007-06-20 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b78
 
  All about setup:
